@@ -27,6 +27,7 @@
 #include "ace/Synch_Traits.h"
 
 #include "dds/DCPS/transport/framework/DataLink.h"
+#include "dds/DCPS/transport/framework/TransportInterface.h"
 #include "dds/DCPS/transport/framework/TransportReactorTask.h"
 #include "dds/DCPS/transport/framework/TransportSendBuffer.h"
 #include "dds/DCPS/transport/framework/TransportSendBuffer_rch.h"
