@@ -1,3 +1,11 @@
+Thu Jan 28 16:36:26 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/multicast/MulticastDataLink.h:
+        * dds/DCPS/transport/multicast/MulticastTransport.h:
+        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
+
+          Fixed compiler warnings/errors for GCC and VC++.
+
 Thu Jan 28 16:02:50 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * tests/DCPS/UnitTests/DisjointSequence.cpp:
